[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/settings.gd" type="Script" id=1]

[node name="settings_node" type="Node2D"]
script = ExtResource( 1 )

[node name="close_button" type="Button" parent="."]
margin_left = 104.0
margin_right = 124.0
margin_bottom = 20.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mute_sfx_button" type="Button" parent="."]
margin_right = 31.0
margin_bottom = 20.0
text = "Msfx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mute_music_button" type="Button" parent="."]
margin_left = 48.0
margin_right = 85.0
margin_bottom = 20.0
text = "Mm"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="close_button" to="." method="_on_close_button_button_up"]
[connection signal="button_up" from="mute_sfx_button" to="." method="_on_mute_sfx_button_button_up"]
[connection signal="button_up" from="mute_music_button" to="." method="_on_mute_music_button_button_up"]
